--- a/bookmarks/account/templates/base.html
+++ b/bookmarks/account/templates/base.html
@@ -16,7 +16,7 @@
 <a href="#">Images</a>
 </li>
 <li {% if section == "people" %}class="selected"{% endif %}>
-<a href="#">People</a>
+<a href="{% url "user_list" %}">People</a>
 </li>
 </ul>
 {% endif %}
