--- a/bookmarks/images/templates/images/image/detail.html
+++ b/bookmarks/images/templates/images/image/detail.html
@@ -9,6 +9,9 @@
                 <span class="count">
                     {{ total_likes }} like{{ total_likes|pluralize }}
                 </span>
+                <span class="count">
+                    {{ total_views }} view{{ total_views|pluralize }}
+                </span>
             </div>
             {{ image.description|linebreaks }}
         </div>
