--- a/bookmarks/images/templates/images/image/detail.html
+++ b/bookmarks/images/templates/images/image/detail.html
@@ -7,8 +7,8 @@
   {% load thumbnail %}
 
   {% thumbnail image.image "300" as im %}
-    <a href="{{ image.image.url }}">
-      <img src="{{ im.url }}" class="image-detail">
+    <a href="{{image.url }}">
+       <img src="{{ im.url }}" class="image-detail">
     </a>
   {% endthumbnail %}
 
