--- a/bookmarks/account/templates/account/dashboard.html
+++ b/bookmarks/account/templates/account/dashboard.html
@@ -5,9 +5,8 @@
     {% with total_images_created=request.user.images_created.count %}
 <p>Welcome to your dashboard. You have bookmarked {{ total_images_created}} image{{ total_images_created|pluralize }}.</p>
 {% endwith %}
-<p>Drag the following button to your bookmarks toolbar to bookmark images
-from other websites → <a href="javascript:{% include "bookmarklet_launcher.js" %}" class="button">Bookmark it</a><p>
-<p>You can also <a href="{% url "edit" %}">edit your profile</a> or <a href="{% url "password_change" %}">change your password</a>.<p>
+<p>Click the following button to bookmark images
+from other websites → <a href="{% url "images:create" %}" class="button">Bookmark it</a><p>
 <p>Welcome to your dashboard. You can <a href="{% url "edit" %}">edit your profile</a> or <a href="{% url "password_change" %}">change your password</a>.</p>
     <h2>What's happening</h2>
     <div id="action-list">
