--- a/bookmarks/account/templates/account/login.html
+++ b/bookmarks/account/templates/account/login.html
@@ -2,11 +2,23 @@
 {% block title %}Log-in{% endblock %}
 {% block content %}
 <h1>Log-in</h1>
-<p>Please, use the following form to log-in. If you don't have an account <a
-href="{% url "register" %}">register here</a></p>
-<form action="." method="post">
-{{ form.as_p }}
-{% csrf_token %}
-<p><input type="submit" value="Log in"></p>
-</form>
+{% if form.errors %}
+    <p>
+        Your username and password didn't match.
+        Please try again.
+    </p>
+{% else %}
+    <p>Please, use the following form to log-in:</p>
+{% endif %}
+<div class="login-form">
+    <form action="{% url 'login' %}" method="post">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <input type="hidden" name="next" value="{{ next }}" />
+        <p><input type="submit" value="Log-in"></p>
+    </form>
+        <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
+        <p></p>Don't have an account? <a href="{% url "register" %}">Signup here</a></p>
+</div>
+
 {% endblock %}
