--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -18,5 +18,7 @@
         <p><input type="submit" value="Log-in"></p>
     </form>
         <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
+        <p></p>Don't have an account? <a href="{% url "register" %}">Signup here</a></p>
 </div>
+
 {% endblock %}
