--- a/bookmarks/account/templates/base.html
+++ b/bookmarks/account/templates/base.html
@@ -36,7 +36,7 @@
       {% for message in messages %}
         <li class="{{ message.tags }}">
           {{ message|safe }}
-            <a href="#" class="close">x</a>
+<!--            <a href="#" class="close">x</a>-->
         </li>
       {% endfor %}
     </ul>
