--- a/bookmarks/images/templates/images/image/list_ajax.html
+++ b/bookmarks/images/templates/images/image/list_ajax.html
@@ -3,11 +3,11 @@
 {% for image in images %}
   <div class="image">
     <a href="{{ image.get_absolute_url }}">
-      {% thumbnail image.image "300x300" crop="100%" as im %}
+<!--      {% thumbnail image.image "300x300" crop="100%" as im %}-->
         <a href="{{ image.get_absolute_url }}">
           <img src="{{ im.url }}">
         </a>
-      {% endthumbnail %}
+<!--      {% endthumbnail %}-->
     </a>
     <div class="info">
       <a href="{{ image.get_absolute_url }}" class="title">
